--- a/src/index.html
+++ b/src/index.html
@@ -40,6 +40,33 @@
             </div>
         </section>
 
+        <section class="start">
+            <div class="container">
+                <div class="start__circle"></div>
+                <div class="start__box">
+                    <h2 class="start__title">Start your essay quick & easy!</h2>
+                    <div class="start__steps">
+                        <div class="start__step">
+                            <span class="start__step-ttl">Step 1</span>
+                            <span class="start__step-txt">Type your essay topic. Be as specific as possible</span>
+                        </div>
+                        <div class="start__step">
+                            <span class="start__step-ttl">Step 2</span>
+                            <span class="start__step-txt">Choose a generated outline that fits your task</span>
+                        </div>
+                        <div class="start__step">
+                            <span class="start__step-ttl">Step 3</span>
+                            <span class="start__step-txt">Use our AI tool to generate your essay draft</span>
+                        </div>
+                        <div class="start__step">
+                            <span class="start__step-ttl">Step 4</span>
+                            <span class="start__step-txt">Edit your draft to create your unique essay</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <section class="test">
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Harum odio, minima ut nulla praesentium explicabo molestias alias fuga nemo aperiam sapiente eligendi architecto cupiditate quibusdam quae laborum esse ab fugit. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ea eaque iste hic. Molestiae ratione non maxime itaque ipsam dignissimos. Unde doloribus quae earum possimus ipsam voluptate dolorem sapiente laudantium quisquam. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit, soluta. Temporibus provident doloremque porro earum? Architecto voluptatem numquam id. Sed iste necessitatibus ex. Inventore tempora distinctio officia recusandae omnis commodi? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat pariatur eaque fuga laudantium sunt perferendis, in vero reiciendis sed, modi tempora? Atque nulla itaque doloremque iste illum, cumque commodi quaerat. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odit voluptate architecto error eveniet facilis vitae quod, quidem, a vel maxime consectetur fuga aperiam, dolore quisquam quaerat unde sint eos in. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quis eaque similique ex aliquam quae error ipsum ab! Eius ducimus quasi repellendus et, in provident qui est, commodi dignissimos id labore. Lorem ipsum dolor sit amet consectetur adipisicing elit. Et alias, aperiam quidem laborum expedita saepe corporis nesciunt magni quae nobis, pariatur maxime harum dolor consequuntur repellat eveniet perferendis modi corrupti. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente a, ea assumenda asperiores accusantium quam praesentium possimus molestiae ex, eos dolores officiis perferendis ipsa iure! Assumenda doloribus aspernatur quae aut. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempora soluta necessitatibus quia. Eum voluptatem doloribus temporibus numquam mollitia asperiores, nemo hic, voluptatibus vitae rem eveniet eaque quisquam, tempora non. Ducimus.</p>
         </section>
