completed (without any exta)

--- a/src/index.html
+++ b/src/index.html
@@ -67,8 +67,58 @@
             </div>
         </section>
 
+        <section class="reviews">
+            <div class="container">
+                <div class="reviews__box">
+                    <h3 class="reviews__title">Testimonials from students who are getting essay drafts fast</h3>
+                    <div class="reviews__reviews-box">
+                        <img src="images/map.png" alt="earth map" width="750px" height="450px" class="reviews__img">
+                        <div class="reviews__cards">
+                            <div class="reviews__card">
+                                <span class="card__name">Emma Jackson</span>
+                                <!-- тут повинні бути зірочки в вигляді SVG але мені було впадоло їх шукати
+                                <img src="#" alt="#" class="card__img"> -->
+
+                                <span class="card__rating">⭐⭐⭐⭐⭐</span>
+
+                                <p class="card__text">Using this tool has been a game-changer! The tool's ability to generate high-quality content and suggest improvements has saved me countless hours of research and drafting.
+                                </p>
+                            </div>
+                            <span class="card__pages">01/10</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="free">
+            <div class="container">
+                <div class="free__box">
+                    <h3 class="free__title">Get an essay draft for <span class="highlited">FREE</span> </h3>
+                    <p class="free__text">Enjoy how easy it is to get an essay draft. <br>
+                        No credit card required.</p>
+                    <a href="#" class="free__button">Try now</a>
+                </div>
+            </div>
+        </section>
+
+        <footer class="footer">
+            <div class="container">
+                <div class="footer__box">
+                    <span class="footer__logo">Website</span>
+                    <a href="#" class="footer__link">Privacy Policy</a>
+                    <a href="#" class="footer__link">Terms of Service</a>
+                    <span class="footer__text">Powered by AI</span>
+                </div>
+            </div>
+        </footer>
+
         <section class="test">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Harum odio, minima ut nulla praesentium explicabo molestias alias fuga nemo aperiam sapiente eligendi architecto cupiditate quibusdam quae laborum esse ab fugit. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ea eaque iste hic. Molestiae ratione non maxime itaque ipsam dignissimos. Unde doloribus quae earum possimus ipsam voluptate dolorem sapiente laudantium quisquam. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit, soluta. Temporibus provident doloremque porro earum? Architecto voluptatem numquam id. Sed iste necessitatibus ex. Inventore tempora distinctio officia recusandae omnis commodi? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat pariatur eaque fuga laudantium sunt perferendis, in vero reiciendis sed, modi tempora? Atque nulla itaque doloremque iste illum, cumque commodi quaerat. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odit voluptate architecto error eveniet facilis vitae quod, quidem, a vel maxime consectetur fuga aperiam, dolore quisquam quaerat unde sint eos in. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quis eaque similique ex aliquam quae error ipsum ab! Eius ducimus quasi repellendus et, in provident qui est, commodi dignissimos id labore. Lorem ipsum dolor sit amet consectetur adipisicing elit. Et alias, aperiam quidem laborum expedita saepe corporis nesciunt magni quae nobis, pariatur maxime harum dolor consequuntur repellat eveniet perferendis modi corrupti. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente a, ea assumenda asperiores accusantium quam praesentium possimus molestiae ex, eos dolores officiis perferendis ipsa iure! Assumenda doloribus aspernatur quae aut. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempora soluta necessitatibus quia. Eum voluptatem doloribus temporibus numquam mollitia asperiores, nemo hic, voluptatibus vitae rem eveniet eaque quisquam, tempora non. Ducimus.</p>
+            <div class="container">
+                <div class="test__box">
+                    <p class="test__lorem">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Harum odio, minima ut nulla praesentium explicabo molestias alias fuga nemo aperiam sapiente eligendi architecto cupiditate quibusdam quae laborum esse ab fugit. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ea eaque iste hic. Molestiae ratione non maxime itaque ipsam dignissimos. Unde doloribus quae earum possimus ipsam voluptate dolorem sapiente laudantium quisquam. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit, soluta. Temporibus provident doloremque porro earum? Architecto voluptatem numquam id. Sed iste necessitatibus ex. Inventore tempora distinctio officia recusandae omnis commodi? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat pariatur eaque fuga laudantium sunt perferendis, in vero reiciendis sed, modi tempora? Atque nulla itaque doloremque iste illum, cumque commodi quaerat. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odit voluptate architecto error eveniet facilis vitae quod, quidem, a vel maxime consectetur fuga aperiam, dolore quisquam quaerat unde sint eos in. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quis eaque similique ex aliquam quae error ipsum ab! Eius ducimus quasi repellendus et, in provident qui est, commodi dignissimos id labore. Lorem ipsum dolor sit amet consectetur adipisicing elit. Et alias, aperiam quidem laborum expedita saepe corporis nesciunt magni quae nobis, pariatur maxime harum dolor consequuntur repellat eveniet perferendis modi corrupti. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente a, ea assumenda asperiores accusantium quam praesentium possimus molestiae ex, eos dolores officiis perferendis ipsa iure! Assumenda doloribus aspernatur quae aut. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempora soluta necessitatibus quia. Eum voluptatem doloribus temporibus numquam mollitia asperiores, nemo hic, voluptatibus vitae rem eveniet eaque quisquam, tempora non. Ducimus.</p>
+                </div>
+            </div>
         </section>
         
     </body>
