calculator visual part

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta charset="UTF-8">
         <title>VERSTKA</title>
         <meta name="viewport" content="width=device-width">
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
@@ -117,6 +116,43 @@
             <div class="container">
                 <div class="test__box">
                     <p class="test__lorem">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Harum odio, minima ut nulla praesentium explicabo molestias alias fuga nemo aperiam sapiente eligendi architecto cupiditate quibusdam quae laborum esse ab fugit. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ea eaque iste hic. Molestiae ratione non maxime itaque ipsam dignissimos. Unde doloribus quae earum possimus ipsam voluptate dolorem sapiente laudantium quisquam. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit, soluta. Temporibus provident doloremque porro earum? Architecto voluptatem numquam id. Sed iste necessitatibus ex. Inventore tempora distinctio officia recusandae omnis commodi? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat pariatur eaque fuga laudantium sunt perferendis, in vero reiciendis sed, modi tempora? Atque nulla itaque doloremque iste illum, cumque commodi quaerat. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odit voluptate architecto error eveniet facilis vitae quod, quidem, a vel maxime consectetur fuga aperiam, dolore quisquam quaerat unde sint eos in. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quis eaque similique ex aliquam quae error ipsum ab! Eius ducimus quasi repellendus et, in provident qui est, commodi dignissimos id labore. Lorem ipsum dolor sit amet consectetur adipisicing elit. Et alias, aperiam quidem laborum expedita saepe corporis nesciunt magni quae nobis, pariatur maxime harum dolor consequuntur repellat eveniet perferendis modi corrupti. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente a, ea assumenda asperiores accusantium quam praesentium possimus molestiae ex, eos dolores officiis perferendis ipsa iure! Assumenda doloribus aspernatur quae aut. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempora soluta necessitatibus quia. Eum voluptatem doloribus temporibus numquam mollitia asperiores, nemo hic, voluptatibus vitae rem eveniet eaque quisquam, tempora non. Ducimus.</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="calculator">
+            <div class="container">
+                <h3 class="calculator__title">Calculator</h3>
+                <input type="text" class="calculator__display">
+                <div class="calculator__box">
+                    <div class="calculator__numbers">
+                        <div class="calculator__row">
+                            <button class="calculator__num">1</button>
+                            <button class="calculator__num">2</button>
+                            <button class="calculator__num">3</button>
+                        </div>
+                        <div class="calculator__row">
+                            <button class="calculator__num">4</button>
+                            <button class="calculator__num">5</button>
+                            <button class="calculator__num">6</button>
+                        </div>
+                        <div class="calculator__row">
+                            <button class="calculator__num">7</button>
+                            <button class="calculator__num">8</button>
+                            <button class="calculator__num">9</button>
+                        </div>
+                        <div class="calculator__row">
+                            <button class="calculator__num">0</button>
+                        </div>
+                    </div>
+
+                    <div class="calculator__actions">
+                        <div class="calculator__row calculator__row--actions">
+                            <button class="calculator__action calculator__action--plus">+</button>
+                            <button class="calculator__action calculator__action--minus">-</button>
+                            <button class="calculator__action calculator__action--equal">=</button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
