--- a/src/index.html
+++ b/src/index.html
@@ -125,9 +125,11 @@
             <div class="container">
                 <h3 class="calculator__title">Calculator</h3>
                 <div class="calculator__display">
-                    <div data-previous-operand class="calculator__previous"> </div>
-                    <div data-current-operand class="calculator__current"> </div>
+                    <div data-previous-operand class="calculator__previous">&nbsp;</div>
+                    <div data-current-operand class="calculator__current">&nbsp;</div>
                 </div>
+                <div class="calculator__display calculator__display--test" id="test">test123</div>
+                <button class="test-btn">test</button>
                 <div class="calculator__box">
                     <div class="calculator__numbers">
                         <div class="calculator__row">
@@ -157,12 +159,12 @@
                         <div class="calculator__row calculator__row--actions">
                             <button data-operation class="calculator__action calculator__action--plus">+</button>
                             <button data-operation class="calculator__action calculator__action--minus">-</button>
-                            <button data-all-clear class="calculator__action calculator__action--minus">AC</button>
+                            <button data-all-clear class="calculator__action calculator__action--clear">AC</button>
                         </div>
                         <div class="calculator__row calculator__row--actions">
                             <button data-operation class="calculator__action">/</button>
                             <button data-operation class="calculator__action">x</button>
-                            <button data-delete class="calculator__action">DEL</button>
+                            <button data-delete class="calculator__action calculator__action--delete">DEL</button>
                         </div>
                     </div>
                 </div>
